--- a/ref-cn.html
+++ b/ref-cn.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <title>Highcharts - Options Reference</title>
     <link rel="stylesheet" type="text/css" href="src/ref-cn.css" />
-    <script type="text/javascript" src="src/jquery.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
     <script type="text/javascript" src="src/ref-cn.js"></script>
 </head>
 <body>
